Mas imag. porosidad

--- a/ResumenImagenes/main.tex
+++ b/ResumenImagenes/main.tex
@@ -14,6 +14,10 @@
 
 \begin{document}
  
+\section{Faltantes}
+
+Muestra condiciones de frontera libres, graficar usando ovito's atomic strain.
+ 
 \section{CuZr a distintas temperaturas}
 
 %
@@ -791,91 +795,217 @@ run 50000
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_STZObservation_3_0.png}
-\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0. Atomos shear strain superior a 0.25. Parte 1/3}
+\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0. Atomos shear strain superior a 0.25. Compresion. Parte 1/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_STZObservation_3_0005.png}
-\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0.005. Atomos shear strain superior a 0.25. Parte 2/3}
+\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0.005. Atomos shear strain superior a 0.25. Compresion. Parte 2/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_STZObservation_3_01.png}
-\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0.1. Atomos shear strain superior a 0.25. Parte 3/3}
+\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0.1. Atomos shear strain superior a 0.25. Compresion. Parte 3/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_3_faceAS_0_02.png}
-\caption{Porosidad 3\%. Cara de la muestra. Strain 0. Color coding con shear strain entre 0 y 0.2. Parte 1/3}
+\caption{Porosidad 3\%. Cara de la muestra. Strain 0. Color coding con shear strain entre 0 y 0.2. Compresion. Parte 1/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_3_faceAS_0_02_0005.png}
-\caption{Porosidad 3\%. Cara de la muestra. Strain 0.005. Color coding con shear strain entre 0 y 0.2. Parte 2/3}
+\caption{Porosidad 3\%. Cara de la muestra. Strain 0.005. Color coding con shear strain entre 0 y 0.2. Compresion. Parte 2/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_3_faceAS_0_02_001.png}
-\caption{Porosidad 3\%. Cara de la muestra. Strain 0.01. Color coding con shear strain entre 0 y 0.2. Parte 3/3}
+\caption{Porosidad 3\%. Cara de la muestra. Strain 0.01. Color coding con shear strain entre 0 y 0.2. Compresion. Parte 3/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_0.png}
-\caption{Porosidad 6\%. Strain 0. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 1/4}
+\caption{Porosidad 6\%. Strain 0. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Compresion. Parte 1/4}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_006.png}
-\caption{Porosidad 6\%. Strain 0.06. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 2/4}
+\caption{Porosidad 6\%. Strain 0.06. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Compresion. Parte 2/4}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_012.png}
-\caption{Porosidad 6\%. Strain 0.12. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 3/4}
+\caption{Porosidad 6\%. Strain 0.12. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Compresion. Parte 3/4}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_018.png}
-\caption{Porosidad 6\%. Strain 0.18. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 4/4}
+\caption{Porosidad 6\%. Strain 0.18. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Compresion. Parte 4/4}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_13_0_puente.png}
-\caption{Porosidad 13\%. Strain 0. Con 13\% porosidad, a 0.005 deformacion ya pueden observarse átomos sometidos a tensiones altas. Estos se ubican alrededor de los poros o separando poros formando una especie de puente como se puede observar en las dos figuras siguientes. Los átomos presentes son aquellos con shear strain superior a 0.2. Parte 1/2}
+\caption{Porosidad 13\%. Strain 0. Con 13\% porosidad, a 0.005 deformacion ya pueden observarse átomos sometidos a tensiones altas. Estos se ubican alrededor de los poros o separando poros formando una especie de puente como se puede observar en las dos figuras siguientes. Los átomos presentes son aquellos con shear strain superior a 0.2. Compresion. Parte 1/2}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_13_0005_puente.png}
-\caption{Porosidad 13\%. Strain 0. Con 13\% porosidad, a 0.005 deformacion ya pueden observarse átomos sometidos a tensiones altas. Estos se ubican alrededor de los poros o separando poros formando una especie de puente como se puede observar en las dos figuras siguientes. Los átomos presentes son aquellos con shear strain superior a 0.2. Parte 2/2}
+\caption{Porosidad 13\%. Strain 0. Con 13\% porosidad, a 0.005 deformacion ya pueden observarse átomos sometidos a tensiones altas. Estos se ubican alrededor de los poros o separando poros formando una especie de puente como se puede observar en las dos figuras siguientes. Los átomos presentes son aquellos con shear strain superior a 0.2. Compresion. Parte 2/2}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_13_shearstrain_poro_0.png}
-\caption{Porosidad 13\%. Strain 0. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Parte 1/3}
+\caption{Porosidad 13\%. Strain 0. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Compresion. Parte 1/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_13_shearstrain_poro_001.png}
-\caption{Porosidad 13\%. Strain 0.03. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Parte 2/3}
+\caption{Porosidad 13\%. Strain 0.03. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Compresion. Parte 2/3}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/porosidad_13_shearstrain_poro_003.png}
-\caption{Porosidad 13\%. Strain 0.03. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Parte 3/3}
+\caption{Porosidad 13\%. Strain 0.03. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Compresion. Parte 3/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_kinetic_4strain.png}
+\caption{Porosidad 3\%. Strain 4\%. Kinetic energy coloring. Slice a compresion. No se observa heating alrededor de los poros. La muestra se ve bastante uniforme.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_kinetic_4strain.png}
+\caption{Porosidad 6\%. Strain 4\%. Kinetic energy coloring. Slice a compresion. No se observa heating alrededor de los poros. La muestra se ve bastante uniforme.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_kinetic_4strain.png}
+\caption{Porosidad 13\%. Strain 4\%. Kinetic energy coloring. Slice a compresion. No se observa heating alrededor de los poros. La muestra se ve bastante uniforme.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_muestra_0strain.png}
+\caption{Porosidad 3\%. Strain 0\%.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_muestra_2strain.png}
+\caption{Porosidad 3\%. Strain 2\%. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_muestra_2strain_color_0_02.png}
+\caption{Porosidad 3\%. Strain 2\%. Shear strain entre 0 y 0.2. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_muestra_2strain_color_slice_0_02.png}
+\caption{Porosidad 3\%. Strain 2\%. Shear strain entre 0 y 0.2. Slice compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_muestra_0strain.png}
+\caption{Porosidad 6\%. Strain 0\%.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_muestra_2strain.png}
+\caption{Porosidad 6\%. Strain 2\%. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_muestra_2strain_color_0_02.png}
+\caption{Porosidad 6\%. Strain 2\%. Shear strain entre 0 y 0.2. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_muestra_2strain_color_slice_0_02.png}
+\caption{Porosidad 6\%. Strain 2\%. Shear strain entre 0 y 0.2. Slice compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_muestra_0strain.png}
+\caption{Porosidad 13\%. Strain 0\%.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_muestra_2strain.png}
+\caption{Porosidad 13\%. Strain 2\%. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_muestra_2strain_color_0_02.png}
+\caption{Porosidad 13\%. Strain 2\%. Shear strain entre 0 y 0.2. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_muestra_2strain_color_slice_0_02.png}
+\caption{Porosidad 13\%. Strain 2\%. Shear strain entre 0 y 0.2. Slice compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_trac_umbral.png}
+\caption{Porosidad 3\%. Traccion. Grafico de la cantidad de atomos que, de un paso a otro (pasos de 0.005 strain) se agregan a aquellos atomos que superan un umbral de Shear Strain de 0.2. Hasta 0.045, a cada paso se agrega un namero de atomos similar. Entre 0.05 y 0.07 la tendencia aumenta, estableciéndose en un número superior.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_trac_umbral2.png}
+\caption{Porosidad 3\%. Traccion. Numero de atomos que no superan los 0.2 shear strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_strain0005_color_0_04.png}
+\caption{Porosidad 3\%. Traccion. Strain 0.005, color coding entre 0 y 0.4 shear strain, atomos mostrados superan 0.2 shear strain. A strains tan bajos como 0.005, ya hay unión de poros como se observaba en compresión. Sin embargo, hay mayor cantidad de átomos alejados de poros sometidos a strains altos, como se puede ver a la derecha de la imagen.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_strain002_color_0_04.png}
+\caption{Porosidad 3\%. Traccion. Strain 0.02, color coding entre 0 y 0.4 shear strain, atomos mostrados superan 0.2 shear strain. }
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_trac_umbral3.png}
+\caption{Porosidad 3\%. Traccion. Gráfico de la cantidad de átomos que, de un paso a otro (pasos de 0.005 strain) se agregan a aquellos átomos que superan un umbral de Shear Strain de 0.3. La tendencia a aumentar es marcada a partir de strains 0.045, y en 0.07 se da un gran salto. Los átomos que en la figura anterior se identificaron como átomos sometidos a alto strain pero separados de los poros no se observan de igual manera cuando el umbral de shear strain se setea a 0.3. Figura siguiente.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_strain007_color_0_04.png}
+\caption{Porosidad 3\%. Traccion. Strain 0.07, color coding entre 0 y 0.4 shear strain, atomos mostrados superan 0.3 shear strain.}
 \end{figure}
 
 \end{document}
