Finalizadas imagenes porosidad

--- a/ResumenImagenes/main.tex
+++ b/ResumenImagenes/main.tex
@@ -1008,4 +1008,504 @@ run 50000
 \caption{Porosidad 3\%. Traccion. Strain 0.07, color coding entre 0 y 0.4 shear strain, atomos mostrados superan 0.3 shear strain.}
 \end{figure}
 
+Los icosahedros, según Arman, son shear resistant. En compresión, para todas las porosidades, se observa un aumento general en el número de icosahedros, y luego una disminución. Esto podría indicar hardening seguido de softening. El máximo hardening llega a deformaciones mayores mientras mayor sea la porosidad. Hay que tener en cuenta que todas los strains (incluso aquellos de las imágenes anteriores) fueron obtenidas con la fórmula ingenieril. Tal vez esto tenga influencia sobre las curvas.
+
+Según Arman, las zonas con presencia de átomos de Tipo 3 y ausencia de átomos Tipo 1 y 6 son aquellas con mejores condiciones para la nucleación de STZs. Viendo los gráficos, la cantidad de átomos de tipo 3 aumentan al principio, pero luego disminuyen. Esta disminución podría estar relacionada con la deceleración en la formación de STZs, y también con el hardening (“As argued by Chen, the critical shear stress driving the formation of STZ will increase in order to sustain a plastic deformation rate as the nucleation sites exhaust, thus giving rise to the transient strain hardening” ?). Faltaría analizar un slice de la muestra para ver como se agrupan los átomos de distintos tipos en función del shear strain.
+
+El que a 13\% porosidad el hardening tarde más en llegar a su máximo coincide con que los átomos de Tipo 3 tarden más en reducirse. Se observa facilmente analizando el crossover entre ambos tipos. A 3\%: Strain 0.202, No. of Voronoi cells 4.8\%. A 6\%: Strain 0.217, No of Voronoi cells 4.73\%. A 13\%: Strain 0.26, No. of Voronoi cells 4.5\%.
+
+En tracción no se observan cambios de este tipo. Los porcentajes de Voronoi se mantienen relativamente constantes. Restaría ver si hay cambios entre Tipos de Voronoi.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_noVoronoi_strain.png}
+\caption{Porosidad 3\%. Compresion. Voronoi cells vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_6_noVoronoi_strain.png}
+\caption{Porosidad 6\%. Compresion. Voronoi cells vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_13_noVoronoi_strain.png}
+\caption{Porosidad 13\%. Compresion. Voronoi cells vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_noVoronoi_strain_trac.png}
+\caption{Porosidad 3\%. Traccion. Voronoi cells vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_6_noVoronoi_strain_trac.png}
+\caption{Porosidad 6\%. Traccion. Voronoi cells vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_13_noVoronoi_strain_trac.png}
+\caption{Porosidad 13\%. Traccion. Voronoi cells vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_noVoronoi_strain_tipo1_comp.png}
+\caption{Compresion. Voronoi cells vs strain. Tipo 1}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_noVoronoi_strain_tipo2_comp.png}
+\caption{Compresion. Voronoi cells vs strain. Tipo 2}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_noVoronoi_strain_tipo3_comp.png}
+\caption{Compresion. Voronoi cells vs strain. Tipo 3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_noVoronoi_strain_tipo4_comp.png}
+\caption{Compresion. Voronoi cells vs strain. Tipo 4}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_noVoronoi_strain_tipo5_comp.png}
+\caption{Compresion. Voronoi cells vs strain. Tipo 5}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_noVoronoi_strain_tipo6_comp.png}
+\caption{Compresion. Voronoi cells vs strain. Tipo 6}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_noVoronoi_strain_tipo7_comp.png}
+\caption{Compresion. Voronoi cells vs strain. Tipo 7}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_CU_tipo1.png}
+\caption{Type 1 atoms, porosidad 3\%, 0 strain. Los atomos rojos son atomos de Cu, los azules de Zr. El 97.7\% de los atomos de Tipo 1 son atomos de Cu. La proporcion de atomos de Cu, en lineas generales, va aumentando hacia el 100\% con el strain. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_CU_tipo2.png}
+\caption{Type 2 atoms, porosidad 3\%, 0 strain. El 96.4\% de los atomos de Tipo 2 son atomos de Cu. La proporcion de atomos de Cu se mantiene relativamente constante con el strain. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_CU_tipo3.png}
+\caption{Type 3 atoms, porosidad 3\%, 0 strain. El 99.6\% de los atomos de Tipo 3 son atomos de Cu. La proporcion de atomos de Cu se mantiene constante con el strain hasta cierto punto (ver Figura atomos tipo 3). Con la disminucion general de atomos de tipo 3, disminuye ligeramente la proporcion de atomos de Cu. Al final terminan siendo alrededor del 96\%. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_CU_tipo4.png}
+\caption{Type 4 atoms, porosidad 3\%, 0 strain. El 95.7\% de los atomos de Tipo 4 son atomos de Cu. La proporcion de atomos de Cu se mantiene relativamente constante con el strain, disminuyendo al 87\% hacia el final de la simulacion. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_CU_tipo5.png}
+\caption{Type 5 atoms, porosidad 3\%, 0 strain. El 71.6\% de los atomos de Tipo 5 son atomos de Cu. La proporcion de atomos de Cu  aumenta hacia el 84\% al final de la simulacion. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_CU_tipo6.png}
+\caption{Type 6 atoms, porosidad 3\%, 0 strain. El 53.1\% de los atomos de Tipo 6 son atomos de Cu. La proporcion de atomos de Cu aumenta hacia el 90\% al final de la simulacion. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_3_CU_tipo7.png}
+\caption{Type 7 atoms, porosidad 2\%, 0 strain. El 81.2\% de los atomos de Tipo 7 son atomos de Cu. La proporcion de atomos de Cu se mantiene relativamente constante con el strain, aumentando hacia el final. Compresion}
+\end{figure}
+
+A continuación algunas curvas para compresión y tracción. La velocidad se refiere a dos velocidades de enfriamiento/calentamiento durante el proceso de equilibración post-sintering: $6.5x10^{12}$ y $6.5x10^{14}$ (el valor original con el que se hicieron todas las curvas anteriores). 
+
+Hay que tener en cuenta, para todas las figuras que siguen, que la curva identificada con porosidad 5\% y velocidad $10^{12}$ comienza en realidad sin porosidad: la porosidad se pierde durante la equilibración debido a que toma más tiempo. Esto es especialmente notorio en las Figuras \ref{fg:1trac} y \ref{fg:2trac} de TRACCION, y lógicamente en las Figuras \ref{fg:3trac} y \ref{fg:3comp}.
+
+Se observa bien que, como es sabido, el valor del módulo de elasticidad varía con la velocidad de enfriamiento.
+
+Las Figuras \ref{fg:4comp}-\ref{fg:7comp} de COMPRESION demuestran que las curvas de Voronoi son muy similares y parecen no depender de la velocidad de enfriamiento/calentamiento. También se puede observar en las Figuras \ref{fg:4trac}-\ref{fg:9trac} de TRACCION.
+
+Las Figuras \ref{fg:8comp}-\ref{fg:9comp} de COMPRESION y \ref{fg:10trac}-\ref{fg:11trac} de TRACCION muestran que la mayor parte de los cambios entre tipos de Voronoi se dan en átomos de cobre, especialmente en los tipos 1 a 4, y en un poco menor medida en los tipos 5 a 7, debido a que la curva de los tipos de Voronoi para átomos de cobre sigue casi perfectamente a la curva del número total.
+
+De la Figura \ref{fg:10comp} a la \ref{fg:17comp} de COMPRESION se muestran unos histogramas de cambios entre tipos de Voronoi. El tipo denominado Tipo 0 representa aquellos átomos que no están encuadrados dentro de los Tipos 1 a 7. Se analizan los cambios desde y hacia el Tipo 1 y 3, comparando con respecto al frame inicial, o comparando cada frame con el frame anterior (el título del gráfico lo indica). 
+
+La Figura \ref{fg:18comp} es el equivalente de la Figura \ref{fg:12comp} COMPRESION para 5\%. Esto es para ver que las tendencias se mantienen, pero se adelanta o retrasa el inicio de los cambios grandes.
+
+De la Figura \ref{fg:19comp} a la \ref{fg:26comp} se puede observar el impacto de los atomos de cobre en los cambios entre tipos de Voronoi con respecto al Tipo 6. Los polyedros centrados en Zr cambian principalmente con los Tipo 0, y no con los otros Tipos.
+
+Sigue estando la cuestión con los valores de Voronoi en TRACCION.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_VM_strain_2vel.png}
+\caption{Compresion. Stress vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_temp_strain_2vel_comp.png}
+\caption{Compresion. Temperatura vs strain.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_svf_strain_2vel_comp.png}
+\caption{Compresion. SVF vs strain.}
+\label{fg:3comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi1.png}
+\caption{}
+\label{fg:4comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi2.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi3.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi4.png}
+\caption{}
+\label{fg:7comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi_13_14_comp.png}
+\caption{Compresion. Porosidad 13\%, velocidad de enfriamiento/calentamiento de $6.5x10^{14}$. Parte 1/2}
+\label{fg:8comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi_13_14_comp2.png}
+\caption{Compresion. Porosidad 13\%, velocidad de enfriamiento/calentamiento de $6.5x10^{14}$. Parte 2/2}
+\label{fg:9comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist1.png}
+\caption{aumento de cambios 3->1 y 2->1 con strain (con respecto al frame inicial).}
+\label{fg:10comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist2.png}
+\caption{los cambios 3->1 no tienen tanta relevancia. Puede ser que primero pasen por otro tipo (tipo 0 probablemente), antes de pasar a ser 1.  Los cambios 6->1 y 2->1 son más importantes (Arman habla de semejanza estructural entre Tipos 1 y 2).}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist3.png}
+\caption{cambios 1->3 importantes con poco strain. Hacia el final aumenta 1->1 (es lógico ya que aumenta el número total de Tipo 1) y 1->6.}
+\label{fg:12comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist4.png}
+\caption{aumenta 1->6 y 1->2 con strain, ademas del logico 1->1.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist5.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist6.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist7.png}
+\caption{3->1 y 3->6 aumentan, y disminuye los 3->3.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist8.png}
+\caption{}
+\label{fg:17comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist9.png}
+\caption{}
+\label{fg:18comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist10.png}
+\caption{}
+\label{fg:19comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist11.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist12.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist13.png}
+\caption{los polyedros con centro en atomos de Zr participan principalmente en los cambios tipo 0->6 y 6->6, dado que esta figura es muy similar a la Figura 21. Incluso los cambios 6->6 son menores comparados a los 0->6. Las figuras siguientes muestran lo mismo para los cambios 6->0.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist14.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist15.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist16.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_comp_voronoi_hist17.png}
+\caption{}
+\label{fg:26comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_VM_strain_2vel_trac.png}
+\caption{Traccion. Stress vs strain.}
+\label{fg:1trac}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_temp_strain_2vel_trac.png}
+\caption{Traccion. Temperatura vs strain.}
+\label{fg:2trac}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_svf_strain_2vel_trac.png}
+\caption{Traccion. SVF vs strain.}
+\label{fg:3trac}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_trac_voronoi1.png}
+\caption{}
+\label{fg:4trac}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_trac_voronoi2.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_trac_voronoi3.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_trac_voronoi4.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_trac_voronoi5.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_trac_voronoi6.png}
+\caption{}
+\label{fg:9trac}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi_13_14_trac.png}
+\caption{Traccion. Porosidad 13\%, velocidad de enfriamiento/calentamiento de $6.5x10^{14}$. Parte 1/2}
+\label{fg:10trac}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/Porosidad_2vel_voronoi_13_14_trac2.png}
+\caption{Traccion. Porosidad 13\%, velocidad de enfriamiento/calentamiento de $6.5x10^{14}$. Parte 2/2}
+\label{fg:11trac}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_trac_voronoi_hist1.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_trac_voronoi_hist2.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_trac_voronoi_hist3.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/Porosidad_2vel_trac_voronoi_hist4.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_newSinter_svf.png}
+\caption{Compresion. SVF vs strain. Nuevo sintering}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_newSinter_vm.png}
+\caption{Compresion. VonMises vs strain. Nuevo sintering}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_newSinter_temp.png}
+\caption{Compresion. Temperatura vs strain. Nuevo sintering}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_newSinter_voronoi3.png}
+\caption{Compresion. Voronoi tipo 3 vs strain. Nuevo sintering}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_1.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_2.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_3.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_4.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_5.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_6.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_7.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_8.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_9.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_10.png}
+\caption{}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{Figures/Porosidad_ss_11.png}
+\caption{}
+\end{figure}
+
 \end{document}
